update readme lưu đồ thuật toán

--- a/README
+++ b/README
@@ -84,4 +84,5 @@ https://drive.google.com/file/d/19ZqBlTzRiTUdUylslvrwirQt8ozASohF/view?usp=shari
 https://drive.google.com/file/d/1AsSR0mHNE9UGVOE0k1nJYVHmSVLO9Z0k/view?usp=sharing
 -03:
 
-
+Lưu đồ thuật toán ReadMe
+"C:\Users\LENOVO\Downloads\Editor _ Mermaid Chart-2025-06-06-010507.png"
