--- a/README
+++ b/README
@@ -83,6 +83,8 @@ https://drive.google.com/file/d/19ZqBlTzRiTUdUylslvrwirQt8ozASohF/view?usp=shari
 -02:
 https://drive.google.com/file/d/1AsSR0mHNE9UGVOE0k1nJYVHmSVLO9Z0k/view?usp=sharing
 -03:
+## Lưu đồ thuật toán chức năng chính
 
-Lưu đồ thuật toán ReadMe
-"C:\Users\LENOVO\Downloads\Editor _ Mermaid Chart-2025-06-06-010507.png"
+Dưới đây là lưu đồ thuật toán cho phương thức `main` trong `HotelManagement.java`, thể hiện chức năng `addBooking`:
+
+![Lưu đồ thuật toán chức năng chính](C:\Users\LENOVO\Downloads\Editor _ Mermaid Chart-2025-06-06-010507.png)
