--- a/README
+++ b/README
@@ -87,4 +87,4 @@ https://drive.google.com/file/d/1AsSR0mHNE9UGVOE0k1nJYVHmSVLO9Z0k/view?usp=shari
 
 Dưới đây là lưu đồ thuật toán cho phương thức `main` trong `HotelManagement.java`, thể hiện chức năng `addBooking`:
 
-![Lưu đồ thuật toán chức năng chính](C:\Users\LENOVO\Downloads\Editor _ Mermaid Chart-2025-06-06-010507.png)
+![Lưu đồ thuật toán chức năng chính](https://drive.google.com/file/d/1-YztSr3uTtsqaNtzF-dGCkJwRVqrML_D/view?usp=sharing)
