--- a/README
+++ b/README
@@ -88,3 +88,9 @@ https://drive.google.com/file/d/1AsSR0mHNE9UGVOE0k1nJYVHmSVLO9Z0k/view?usp=shari
 Dưới đây là lưu đồ thuật toán cho phương thức `main` trong `HotelManagement.java`, thể hiện chức năng `addBooking`:
 
 ![Lưu đồ thuật toán chức năng chính](https://drive.google.com/file/d/1-YztSr3uTtsqaNtzF-dGCkJwRVqrML_D/view?usp=sharing)
+## Phân công công việc
+
+- **Phạm Văn Đạt**: Thực hiện chức năng thêm khách hàng mới (`addNewCustomer`) trong `Main.java`.
+- **Nguyễn Duy Bảo**: Thực hiện chức năng tìm phòng trống (`findAvailableRoom`) trong `Main.java`.
+- **Trần Văn Nhật**: Thực hiện chức năng đặt phòng và kiểm tra trạng thái phòng (`bookRoomAndCheckStatus`) trong `Main.java`.
+- **Cả nhóm**: Gọi các chức năng con trong phương thức `main` để tạo thành chức năng chính.
