--- a/README
+++ b/README
@@ -90,7 +90,7 @@ Dưới đây là lưu đồ thuật toán cho phương thức `main` trong `Hot
 ![Lưu đồ thuật toán chức năng chính](https://drive.google.com/file/d/1-YztSr3uTtsqaNtzF-dGCkJwRVqrML_D/view?usp=sharing)
 ## Phân công công việc
 
-- **Phạm Văn Đạt**: Thực hiện chức năng thêm khách hàng mới (`addNewCustomer`) trong `Main.java`.
-- **Nguyễn Duy Bảo**: Thực hiện chức năng tìm phòng trống (`findAvailableRoom`) trong `Main.java`.
-- **Trần Văn Nhật**: Thực hiện chức năng đặt phòng và kiểm tra trạng thái phòng (`bookRoomAndCheckStatus`) trong `Main.java`.
+- **Phạm Văn Đạt MSV 23017150**: Thực hiện chức năng thêm khách hàng mới (`addNewCustomer`) trong `Main.java`.
+- **Nguyễn Duy Bảo MSV 23017133**: Thực hiện chức năng tìm phòng trống (`findAvailableRoom`) trong `Main.java`.
+- **Trần Văn Nhật MSV 23010625**: Thực hiện chức năng đặt phòng và kiểm tra trạng thái phòng (`bookRoomAndCheckStatus`) trong `Main.java`.
 - **Cả nhóm**: Gọi các chức năng con trong phương thức `main` để tạo thành chức năng chính.
