--- a/README
+++ b/README
@@ -96,11 +96,11 @@ Dưới đây là lưu đồ thuật toán cho phương thức `main` trong `Hot
 - **Cả nhóm**: Gọi các chức năng con trong phương thức `main` trong file `test/Main.java`.
 
 ## Mô tả các phương thức
-Thành Viên 1: Nhật
+Thành Viên 1: Nhật MSV 230170625
 Nhiệm vụ: Thêm, xóa trong thông tin khách hàng
-Thành Viên 2: Bảo
+Thành Viên 2: Bảo MSV  23017133
 Nhiệm vụ: Check tra, In list room
-Thành Viên 3: Đạt
+Thành Viên 3: Đạt MSV 23017150
 Nhiệm vụ: Thêm, xóa, trong danh sách phòng
  
 
