--- a/README
+++ b/README
@@ -1,114 +1,93 @@
+# 💻 HỆ THỐNG QUẢN LÝ KHÁCH SẠN
 
-# 💻Chương trình quản lý khách sạn
+## 📖 Giới thiệu
 
-# 📖 Mô Tả
-Chương trình quản lý khách sạn là một ứng dụng phần mềm được thiết kế để giúp quản lý các hoạt động của một khách sạn, bao gồm việc theo dõi các phòng, khách hàng, và các dịch vụ liên quan. Chương trình này có thể bao gồm nhiều tính năng khác nhau để hỗ trợ các công việc quản lý, ví dụ như đặt phòng, trả phòng, xem thông tin phòng, và quản lý khách hàng.
+Đây là ứng dụng web quản lý khách sạn được phát triển bằng **Java Spring Boot**, hỗ trợ các chức năng chính như:
 
+- 🏨 **Quản lý phòng** (xem danh sách phòng, trạng thái)
+- 👤 **Quản lý khách hàng** (thêm, xóa, cập nhật)
+- 📦 **Đặt phòng** và quản lý tình trạng phòng
+- 📊 **Xem báo cáo các phòng đang hoạt động**
 
-# 📌Giao diện người dùng (UI) có thể bao gồm các phần:
+Hệ thống sử dụng cơ sở dữ liệu **MySQL** và giao diện thân thiện với người dùng qua **Thymeleaf + TailwindCSS**.
 
-- Giao diện quản lý phòng: Cho phép thêm thông tin khách hàng đặt phòng, số phòng, CMND, phone, ngày đặt, ngày rời đi.
-
-- Giao diện quản lý khách hàng: Hiển thị thông tin khách hàng đã nhập vào và có chức năng xóa thông tin khách hàng.
-
-- Giao diện kiểm tra phòng: Hiển thị Số phòng, loại phòng và trạng thái của phòng đó.
-
-- Giao diện báo cáo: Hiển thị Tên khách hàng, số phòng, loại phòng đang hoạt động.
-
-
-
-# 👥 Thành Viên Nhóm
-1 Tran Van Nhat
-
-2	Nguyen Duy Bao
-
-3	Pham Van Dat
-
-4	Nguyen Le Thu
+---
+👥 Thành viên nhóm
+| Họ tên         | Mã SV     | Vai trò                                 |
+| -------------- | --------- | --------------------------------------- |
+| Trần Văn Nhật  | 230170625 | Quản lý khách hàng (thêm/xóa/sửa)       |
+| Nguyễn Duy Bảo | 23017133  | Hiển thị và kiểm tra danh sách phòng    |
+| Phạm Văn Đạt   | 23017150  | Đặt phòng, cập nhật trạng thái phòng    |
+| Nguyễn Lê Thu  | -         | Hướng dẫn làm bài                       |
 
 
+## 🚀 Công nghệ sử dụng
 
-# 🚀 Công Nghệ Sử Dụng
+| Thành phần          | Công nghệ                          |
+|---------------------|------------------------------------|
+| Backend             | Java 17 + Spring Boot              |
+| View Layer          | Thymeleaf + HTML + TailwindCSS     |
+| ORM & DB Access     | Spring Data JPA                    |
+| Database            | MySQL 8+                           |
+| Build Tool          | Maven                              |
 
-•	✅Ngôn ngữ: Java
+---
 
-•	💾Database: MySQL
+## 📦 Cài đặt & Khởi chạy
 
-•🔌Kết nối DB: JDBC
+### 1. Cấu hình cơ sở dữ liệu
 
-•	💻Giao Diện: Spring Boot
+- Tạo database trong MySQL:
 
-
-
-# Nội Dung 01:
-Project 04. Xây dựng ứng dụng quản lý khách sạn.
-Yêu cầu chính:
-- Java Spring Boot
-- Giao diện đơn giản
-- Dữ liệu lưu vào file nhị phân
-- Lưu trữ nội bộ bằng các Collection như ArrayList , Map , LinkedList,...
-
-
-# 📋Cách Sử Dụng
-# 1.	Khởi Động Chương Trình:
-
-o	Chạy lớp ServingWebContentApplication.Java để mở giao diện chính (MainDashboard).
-
-# 2.	Giao Diện Chính:
-o	📦Thêm Đặt Phòng: Nhấn nút "Thêm Đặt Phòng" để mở form nhập thông tin khách hàng (tên, CMND, số điện thoại) và đặt phòng (số phòng, ngày đến, ngày đi).
-
-o	👤Quản Lý Khách Hàng: Nhấn nút "Quản Lý Khách Hàng" để xóa khách hàng bằng cách nhập tên hoặc CMND, và xem danh sách khách hàng hiện tại.
-
-o	🧾Kiểm Tra Phòng: Nhấn nút "Danh Sách Phòng" để xem danh sách 15 phòng với thông tin số phòng, loại phòng, và trạng thái.
-
-o	🧱Phòng Đang Hoạt Động: Nhấn nút "Phòng Đang Hoạt Động" để xem danh sách các đặt phòng hiện tại.
+```sql
+CREATE DATABASE hotelbooking;
 
 
-# 🏆Phát triển trong tương lai:
-- Tính tổng tiền thuê cho từng khách hàng
-- Thông kê các phòng đã có người ở, số lượng khách thuê
-- Tìm kiêm khách sạn thuê dài hạn
--
-# Các lớp cần thiết:
-- Customer
-- Booking
-- Room
-# Nội Dung 02:
-- UML Class Diagram (mô tả mối quan hệ giữa các lớp):
-![quanlykhachsan](https://github.com/user-attachments/assets/32a6823a-1911-4461-b014-6c90dadbf1f8)
 
-# Nội dung 03:
--01:
-https://drive.google.com/file/d/19ZqBlTzRiTUdUylslvrwirQt8ozASohF/view?usp=sharing
--02:
-https://drive.google.com/file/d/1AsSR0mHNE9UGVOE0k1nJYVHmSVLO9Z0k/view?usp=sharing
--03:
-## Lưu đồ thuật toán chức năng chính
+# 🌐 Giao diện Người dùng (UI)
+| Chức năng            | URL                      | Mô tả                                   |
+| -------------------- | ------------------------ | --------------------------------------- |
+| Trang chủ            | `http://localhost:8081/` | Giao diện chọn chức năng                |
+| Đặt phòng            | `/bookings/add`          | Thêm đặt phòng mới                      |
+| Quản lý khách hàng   | `/customers/active`      | Xem, tìm kiếm, cập nhật, xóa khách hàng |
+| Danh sách phòng      | `/rooms`                 | Hiển thị tất cả phòng và trạng thái     |
+| Phòng đang hoạt động | `/active-rooms`          | Xem danh sách khách đã đặt phòng        |
 
-Dưới đây là lưu đồ thuật toán cho phương thức `main` trong `HotelManagement.java`, thể hiện chức năng `addBooking`:
 
-![Lưu đồ thuật toán chức năng chính](https://drive.google.com/file/d/1-YztSr3uTtsqaNtzF-dGCkJwRVqrML_D/view?usp=sharing)
-## Phân công công việc
+🧱 Cấu trúc hệ thống
+src/
+├── com.hotelbooking
+│   ├── controller          // Home, Booking, Customer, Room
+│   ├── model               // Booking, Customer, Room
+│   ├── repository          // BookingRepository, CustomerRepository, RoomRepository
+│   ├── service             // BookingManagementService, CustomerManagementService, RoomManagementService
+│   └── HotelbookingApplication.java
+└── resources/
+    ├── templates/          // Các view Thymeleaf
+    └── application.properties
 
-- **Sinh viên Nhật**: Thực hiện chức năng thêm khách hàng mới (`addNewCustomer`) trong file `test/AddCustomer.java`.
-- **Sinh viên Bảo**: Thực hiện chức năng tìm phòng trống (`findAvailableRoom`) trong file `test/FindRoom.java`.
-- **Sinh viên Đạt**: Thực hiện chức năng đặt phòng và kiểm tra trạng thái phòng (`bookRoomAndCheckStatus`) trong file `test/BookRoom.java`.
-- **Cả nhóm**: Gọi các chức năng con trong phương thức `main` trong file `test/Main.java`.
 
-## Mô tả các phương thức
-Thành Viên 1: Nhật MSV 230170625
-Nhiệm vụ: Thêm, xóa trong thông tin khách hàng
-Thành Viên 2: Bảo MSV  23017133
-Nhiệm vụ: Check tra, In list room
-Thành Viên 3: Đạt MSV 23017150
-Nhiệm vụ: Thêm, xóa, trong danh sách phòng
- 
+📌 Tính năng tương lai
+💵 Tính tổng tiền thuê theo số ngày
 
-- **addNewCustomer (Trần Văn Nhật)**:
-  -Cho phép nhập thông tin khách hàng bao gồm Name, idCard, Phone. Kiểm tra xem thông tin đó đã tồn tại trong danh sách hay chưa thông qua hàm addCustomer từ class HotelManagement nếu tồn tại thì không được thêm vào danh sách, còn chưa thì thông tin được nhập vào thành công
+📈 Thống kê phòng đang được sử dụng
 
-- **findAvailableRoom (Nguyễn Duy Bảo)**:
-  -Mô tả: In danh sách phòng và Kiểm tra phòng đó có tồn tại hay còn trống hay không thông qua hàm ở phương thức HotelManagement
+🧾 Tạo hóa đơn và lịch sử đặt phòng
 
-- **bookRoomAndCheckStatus (Phạm Văn Đạt)**:
-  - Mô tả: Thêm thông tin đặt hàng và bổ sung thông tin phòng. Kiểm tra xem thông tin đó có tồn tại hay không thông qua các phương thức kiểm tra ở Class Hotel Management. Nếu không tồn tại thì sẽ được bổ sung thành công. Hết thời gian đó sẽ báo lỗi. Sau phần này thêm hoặc xóa sẽ ra danh sách.
+🔍 Tìm kiếm khách thuê dài hạn
+
+
+📚 Tài liệu tham khảo
+Sơ đồ : https://github-production-user-asset-6210df.s3.amazonaws.com/208896553/446329549-32a6823a-1911-4461-b014-6c90dadbf1f8.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20250628%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250628T184250Z&X-Amz-Expires=300&X-Amz-Signature=35398fe21ff1c71d3f57409d3d1b6998d2733db2fec3e72398542d0800d6f96a&X-Amz-SignedHeaders=host
+
+Lưu đồ thuật toán: https://drive.google.com/file/d/1-YztSr3uTtsqaNtzF-dGCkJwRVqrML_D/view
+
+UML Diagram:  https://drive.google.com/file/d/19ZqBlTzRiTUdUylslvrwirQt8ozASohF/view
+
+
+⚠️ Lưu ý khi chạy
+Đảm bảo MySQL đang hoạt động và cổng 8081 không bị chiếm dụng.
+
+Đảm bảo Java 17+ và Maven đã cài đặt.
+
+Nếu xảy ra lỗi port: đổi server.port=8081 trong application.properties.
