--- a/README
+++ b/README
@@ -1,139 +1,149 @@
-# 💻 CHƯƠNG TRÌNH QUẢN LÝ KHÁCH SẠN
+💻 Ứng dụng Quản lý Khách Sạn
+📖 Giới thiệu
+Ứng dụng web Quản lý Khách Sạn được phát triển bằng Java Spring Boot bởi nhóm 4, lớp OOP_N03_K17, học kỳ 3 năm 2025. Ứng dụng hỗ trợ quản lý phòng, khách hàng, đặt phòng với giao diện thân thiện sử dụng Thymeleaf và TailwindCSS, kết nối cơ sở dữ liệu MySQL.
+Tính năng chính:
 
-## 📖 Giới thiệu
+🏨 Quản lý phòng: Xem danh sách phòng, kiểm tra trạng thái (trống/đã đặt).
+👤 Quản lý khách hàng: Thêm, xóa, sửa thông tin khách hàng.
+📅 Quản lý đặt phòng: Đặt phòng, cập nhật trạng thái phòng.
+📊 Báo cáo: Theo dõi danh sách phòng đang hoạt động.
 
-Đây là ứng dụng web quản lý khách sạn được phát triển bằng **Java Spring Boot**, hỗ trợ các chức năng chính như:
+👥 Thành viên nhóm
 
-* 🏨 **Quản lý phòng:** Xem danh sách phòng, kiểm tra trạng thái.
-* 👤 **Quản lý khách hàng:** Thêm, xóa, cập nhật thông tin khách hàng.
-* 📦 **Đặt phòng:** Quản lý đặt phòng và cập nhật tình trạng phòng.
-* 📊 **Xem báo cáo:** Theo dõi các phòng đang hoạt động.
 
-Hệ thống sử dụng cơ sở dữ liệu **MySQL** và giao diện thân thiện với người dùng thông qua **Thymeleaf** và **TailwindCSS**.
 
-## 👥 Thành viên nhóm
+Họ tên
+Mã SV
+Vai trò
 
-| Họ tên         | Mã SV    | Vai trò                              |
-| -------------- | -------- | ------------------------------------ |
-| Trần Văn Nhật  | 23010625 | Quản lý khách hàng (thêm/xóa/sửa)    |
-| Nguyễn Duy Bảo | 23017133 | Hiển thị và kiểm tra danh sách phòng |
-| Phạm Văn Đạt   | 23017150 | Đặt phòng, cập nhật trạng thái phòng |
-| Nguyễn Lệ Thu  | -        | Hướng dẫn làm bài                    |
 
-## 🚀 Công nghệ sử dụng
 
-| Thành phần      | Công nghệ                      |
-| --------------- | ------------------------------ |
-| Backend         | Java 17 + Spring Boot          |
-| View Layer      | Thymeleaf + HTML + TailwindCSS |
-| ORM & DB Access | Spring Data JPA                |
-| Database        | MySQL 8+                       |
-| Build Tool      | **Maven**                      |
+Trần Văn Nhật
+23010625
+Quản lý khách hàng (thêm/xóa/sửa)
 
-## 📦 Cài đặt & Khởi chạy
 
-### 1. Cấu hình cơ sở dữ liệu
+Nguyễn Duy Bảo
+23017133
+Hiển thị, kiểm tra danh sách phòng
 
+
+Phạm Văn Đạt
+23017150
+Đặt phòng, cập nhật trạng thái phòng
+
+
+Nguyễn Lệ Thu
+-
+Hướng dẫn làm bài
+
+
+🚀 Công nghệ sử dụng
+
+Backend: Java 17, Spring Boot
+Frontend: Thymeleaf, HTML, TailwindCSS
+ORM & Database: Spring Data JPA, MySQL 8+
+Build Tool: Maven
+
+📦 Hướng dẫn cài đặt
+1. Cấu hình cơ sở dữ liệu
 Tạo database trong MySQL:
-
-```sql
 CREATE DATABASE hotelbooking;
-USE hotelbooking;
-```
 
-Cấu hình `application.properties` trong `src/main/resources/`:
-
-```properties
+Cấu hình file src/main/resources/application.properties:
 spring.datasource.url=jdbc:mysql://localhost:3306/hotelbooking
 spring.datasource.username=root
 spring.datasource.password=962005
 spring.jpa.hibernate.ddl-auto=update
-```
+server.port=8081
 
-### 2. Yêu cầu hệ thống
+2. Yêu cầu hệ thống
 
-* Java 17+
-* Maven
-* MySQL 8+
+Java 17+
+Maven
+MySQL 8+
 
-### 3. Khởi chạy ứng dụng
+3. Chạy ứng dụng
 
-Ứng dụng sẽ chạy tại: [http://localhost:8081/](http://localhost:8081/)
+Clone repository:git clone https://github.com/PhamDat-16/OOP_N03_Term3_2025_K17_Group4.git
+cd gs-serving-web-content-main
 
-## 💻 Cách chạy trên Codespace
 
-```bash
+Cài đặt dependencies và chạy:
+mvn clean install
+mvn spring-boot:run
+
+
+Truy cập ứng dụng tại: http://localhost:8081/
+
+4. Chạy trên Codespaces
+Cài đặt MySQL:
 sudo apt update
 sudo apt install mysql-server
 sudo service mysql start
-```
 
-Trong MySQL shell:
-
-```sql
+Cấu hình MySQL:
 ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY '962005';
 CREATE DATABASE IF NOT EXISTS hotelbooking;
 FLUSH PRIVILEGES;
 EXIT;
-```
 
-## 🌐 Giao diện người dùng
+🌐 Giao diện người dùng
 
-| Chức năng            | URL                 | Mô tả                                   |
-| -------------------- | ------------------- | --------------------------------------- |
-| Trang chủ            | `/`                 | Giao diện chọn chức năng                |
-| Đặt phòng            | `/bookings/add`     | Thêm đặt phòng mới                      |
-| Quản lý khách hàng   | `/customers/active` | Xem, tìm kiếm, cập nhật, xóa khách hàng |
-| Danh sách phòng      | `/rooms`            | Hiển thị tất cả phòng và trạng thái     |
-| Phòng đang hoạt động | `/active-rooms`     | Xem danh sách khách đã đặt phòng        |
+Chức năng               	URL	                        Mô tả
+Trang chủ	               /	                    Giao diện chính
+Đặt phòng	              /bookings/add	          Thêm đặt phòng mới
+Quản lý khách hàng	    /customers/active	      Xem, tìm kiếm, cập nhật, xóa khách hàng
+Danh sách phòng	        /rooms                 	Hiển thị phòng và trạng thái
+Phòng đang hoạt động	  /active-rooms	          Xem danh sách khách đã đặt phòng
 
-## 🧱 Cấu trúc hệ thống
 
-```
-QuanLyKhachSan/
+🧱 Cấu trúc dự án
+gs-serving-web-content-main/
 ├── src/
 │   ├── main/
 │   │   ├── java/com/example/servingwebcontent/
-│   │   │   ├── ServingWebContentApplication.java
 │   │   │   ├── controller/
 │   │   │   ├── model/
+│   │   │   ├── repository/
 │   │   │   └── service/
 │   └── resources/
 │       ├── static/
-│       ├── templates/
-│       └── application.properties
-├── pom.xml
-└── README.md
-```
+│       │   └── css/
+│       ├── templates/         
+├── test/
 
-## 📌 Tính năng tương lai
+Mô tả thành phần chính
 
-* 💵 Tính tổng tiền thuê theo số ngày.
-* 📈 Thống kê phòng đang được sử dụng.
-* 🧾 Tạo hóa đơn và lịch sử đặt phòng.
-* 🔍 Tìm kiếm khách thuê dài hạn.
+Controller: Xử lý yêu cầu HTTP (BookingController, CustomerController, RoomController, HomeController).
+Model: Định nghĩa các thực thể Booking, Customer, Room.
+Repository: Giao tiếp với cơ sở dữ liệu qua Spring Data JPA.
+Service: Chứa logic nghiệp vụ cho đặt phòng, khách hàng, phòng.
+Templates: Giao diện Thymeleaf (add.html, list.html, edit.html, v.v.).
+Test: Chứa các hàm kiểm thử (AddCustomer.java, BookRoom.java, FindRoom.java).
 
-## 📚 Tài liệu tham khảo
+📌 Tính năng tương lai
 
-* **Sơ đồ:** [Link ảnh](https://github-production-user-asset-6210df.s3.amazonaws.com/208896553/446329549-32a6823a-1911-4461-b014-6c90dadbf1f8.jpg)
-* **Lưu đồ thuật toán:** [Google Drive](https://drive.google.com/file/d/1-YztSr3uTtsqaNtzF-dGCkJwRVqrML_D/view)
-* **Biểu đồ UML:** [Google Drive](https://drive.google.com/file/d/19ZqBlTzRiTUdUylslvrwirQt8ozASohF/view)
+💵 Tính tổng tiền thuê theo số ngày.
+📈 Thống kê phòng đang sử dụng.
+🧾 Tạo hóa đơn và lịch sử đặt phòng.
+🔍 Tìm kiếm khách thuê dài hạn.
 
-## ⚠️ Lưu ý khi chạy
+📚 Tài liệu tham khảo
 
-* Đảm bảo **MySQL đang hoạt động**.
-* Kiểm tra **cổng 8081** có bị chiếm hay không.
-* Nếu có lỗi cổng: sửa `server.port=8081` trong `application.properties`.
+Sơ đồ: https://github-production-user-asset-6210df.s3.amazonaws.com/208896553/446329549-32a6823a-1911-4461-b014-6c90dadbf1f8.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20250628%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250628T184250Z&X-Amz-Expires=300&X-Amz-Signature=35398fe21ff1c71d3f57409d3d1b6998d2733db2fec3e72398542d0800d6f96a&X-Amz-SignedHeaders=host
+Lưu đồ thuật toán: https://drive.google.com/file/d/1-YztSr3uTtsqaNtzF-dGCkJwRVqrML_D/view
+Biểu đồ UML: https://drive.google.com/file/d/19ZqBlTzRiTUdUylslvrwirQt8ozASohF/view
 
-## 👨‍💼 Phân công công việc & Phương thức chi tiết
+⚠️ Lưu ý
 
-* **Trần Văn Nhật:** `addNewCustomer` trong `test/AddCustomer.java`
-* **Nguyễn Duy Bảo:** `findAvailableRoom` trong `test/FindRoom.java`
-* **Phạm Văn Đạt:** `bookRoomAndCheckStatus` trong `test/BookRoom.java`
-* **Cả nhóm:** Gọi tất cả hàm trong `test/Main.java`
+Đảm bảo MySQL đang chạy.
+Kiểm tra cổng 8081 không bị chiếm dụng.
+Nếu gặp lỗi cổng, sửa server.port trong application.properties.
 
-### Mô tả chi tiết:
+👨‍💼 Phân công công việc
 
-* `addNewCustomer`: Nhập Name, idCard, Phone. Kiểm tra trùng. Nếu đã tồn tại thì không thêm.
-* `findAvailableRoom`: In danh sách, kiểm tra phòng trống/tồn tại.
-* `bookRoomAndCheckStatus`: Thêm thông tin đặt phòng, kiểm tra tồn tại, hết hạn thì báo lỗi.
+Trần Văn Nhật: addNewCustomer (thêm, kiểm tra trùng khách hàng).
+Nguyễn Duy Bảo: findAvailableRoom (xem, kiểm tra phòng trống).
+Phạm Văn Đạt: bookRoomAndCheckStatus (đặt phòng, kiểm tra trạng thái).
+Cả nhóm: Tích hợp các hàm trong test/Main.java.
