--- a/README
+++ b/README
@@ -81,7 +81,7 @@ Cài đặt MySQL:
 sudo apt update
 sudo apt install mysql-server
 sudo service mysql start
-
+sudo mysql
 Cấu hình MySQL:
 ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY '962005';
 CREATE DATABASE IF NOT EXISTS hotelbooking;
